feat: v0.4.3 updates
